Fixed remember me checkbox alignment on sign in

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -18,3 +18,7 @@ $jumbotron-bg:                     white;
 .navbar-brand {
      font-weight: bold;
 }
+
+.checkbox-padding {
+      padding-left: 20px;
+}
